# murmelbahn

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  fly.toml  imhex-schema.txt
.github/workflows/: frontend-ci.yml  rust-ci.yml
cli/: Cargo.toml
cli/src/: command.rs  main.rs
cli/src/command/: download.rs  download_multiple.rs  dump.rs
data/: set_template.json
data/sets/: action_cannon.json  action_cascade.json  action_catapult.json  action_colorswap.json  action_connect.json  action_death_star.json  action_dipper.json  action_drop_n_roll.json  action_dynamo.json  action_electric_cannon.json  action_elevation.json  action_flextube.json  action_flip.json  action_flip_n_dip.json  action_focus.json  action_fusion.json  action_hammer.json  action_jumper.json  action_kinetic_blast.json  action_light.json  action_looping.json  action_m_skytrax.json  action_releaser.json  action_sound.json  action_spinner.json  action_spiral.json  action_tiptube.json  action_trampoline.json  action_transfer.json  action_turbo_lift.json  action_twist.json  action_vertical_cannon.json  action_volcano.json  action_xxl_skytrax.json  action_zipline.json  advent_2021.json  advent_2022.json  advent_2025_slopes.json  ext_bridges.json  ext_building.json  (+47 more)
docker/: supervisord.conf
docker/s6-rc.d/api/: run
docker/s6-rc.d/web/: run
docs/superpowers/plans/: 2026-06-14-frontend-ssr-rebuild.md  2026-06-17-sveltekit-frontend-step3.md
docs/superpowers/specs/: 2026-06-13-frontend-ssr-rebuild-design.md  2026-06-17-sveltekit-frontend-migration-design.md
frontend/: .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: App.svelte  hooks.server.ts  main.ts
frontend/src/assets/: de.json  en.json
frontend/src/lib/: CourseInformation.svelte  InventoryEditor.svelte  api.ts  bom.spec.ts  bom.ts  jsonld.ts  llms-content.spec.ts  llms-content.ts  seo.ts
frontend/src/lib/components/: Footer.svelte  Nav.svelte  SeoHead.svelte
frontend/src/lib/models/: Inventory.ts  Set.ts  SetContentElement.ts  SetRepo.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/about/: +page.server.ts  +page.svelte
frontend/src/routes/llms.txt/: +server.ts
frontend/src/routes/lookup/: +server.ts
frontend/src/routes/robots.txt/: +server.ts
frontend/src/routes/sets/: +page.server.ts  (+1 more)
gravitrax-frontend/: package-lock.json  package.json
lib/: Cargo.toml
lib/examples/: dump_skytrax.rs
lib/src/: app.rs  bom.rs  common.rs  course.rs  error.rs  gravisheet.rs  inventory.rs  lib.rs  physical.rs  set.rs
lib/src/app/: bom.rs  course.rs  download.rs  layer.rs  pillar.rs  power2022.rs  rail.rs  skytrax.rs  wall.rs  ziplineadded2019.rs
lib/src/course/: common.rs  download.rs  power2022.rs  ziplineadded2019.rs
lib/src/course/common/: layer.rs  pillar.rs  rail.rs  wall.rs
lib/src/physical/: bom.rs  element.rs  inventory.rs  set.rs
lib/tests/: fetch-corpus.sh  parse_all.rs  scan_bom.rs  scan_phys.rs
web/: Cargo.toml
web/src/: buildable.rs  course.rs  course_repo.rs  main.rs  set.rs
web/src/api/: buildable.rs  course.rs  mod.rs
(+6 files in other folders)
