[package]
name = "murmelbahn-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"
authors = ["Lars Francke"]

[dependencies]
anyhow = "1.0"
axum = "0.6"
clap = { version = "4.1", features = ["derive"] }
directories = "4.0"
murmelbahn-lib = { path = "../lib" }
schemars = "0.8"
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
