[package]
name = "murmelbahn-lib"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[dependencies]
base64 = "0.21"
deku = "0.15"
derive_more = "0.99"
reqwest = { version = "0.11", features = ["json"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.7"
tracing = "0.1"
ts-rs = "6.2"

[dev-dependencies]
csv = "1.1"
serde = "1.0"
