[package]
name = "murmelbahn-lib"
version = "0.1.0"
edition = "2021"
rust-version = "1.68"

[dependencies]
base64 = "0.22.1"
deku = "0.18.1"
derive_more = "0.99"
reqwest = { version = "0.12.9", features = ["json"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.8.5"
tracing = "0.1"
ts-rs = "10.1.0"

[dev-dependencies]
csv = "1.1"
serde = "1.0"
