[package]
name = "murmelbahn-web"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"
authors = ["Lars Francke"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = ["query"] }
csv = "1.1"
metrics = "0.20"
metrics-exporter-prometheus = "0.11"
murmelbahn-lib = { path = "../lib" }
serde = "1.0"
serde_json = "1.0"
snafu = "0.7"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres" ] }
tokio = { version = "1.24", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
