[package]
name = "murmelbahn-web"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Lars Francke"]

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.1", features = ["derive", "env"] }
csv = "1.1"
futures = "0.3"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
murmelbahn-lib = { path = "../lib" }
serde = "1.0"
serde_json = "1.0"
snafu = "0.8"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
tokio = { version = "1.24", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
